added journal entry page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1   # ✅ added for text styling
+  shared_preferences: ^2.2.3 
+  intl: ^0.19.0 
 
 dev_dependencies:
   flutter_test:
